<resources>
    <string name="app_name">Cryptoday</string>
    <string name="currencies">Currencies</string>
    <string name="convert">Convert</string>
    <string name="info">Info</string>
    <string name="list_setting">list setting</string>
    <string name="search">Search…</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="current_price">Current Price</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="market_cap">Market Cap</string>
    <string name="volume_24h">Volume (24h)</string>
    <string name="circulating_supply">Circulating Supply</string>
    <string name="maximum_supply">Maximum Supply</string>
    <string name="genesis_date">Genesis Date</string>
    <string name="link">Link</string>
    <string name="slide">slider</string>
    <string name="space">"             "</string>
    <string name="google_account_not_found">Google Account Not Found</string>
    <string name="coma">,</string>
    <string name="retry">retry?</string>
    <string name="wait_server_limited">server calls have been restricted, wait for</string>
    <string name="network_unavailable">Somethings wrong, couldn\'t reach server,</string>
    <string name="this_data_is_not_up_to_date">this data is not up-to-date,</string>
    <string name="sort_by">Sort By</string>
    <string name="pair_currency">Pair Currency</string>
    <string name="apply">Apply</string>
    <string name="login_successfully">Login Successfully</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="content_description">content_description</string>
    <string name="welcome">Welcome</string>
    <string name="cryptoday">Cryptoday</string>
    <string name="default_content_description">default_content_description</string>
    <string name="coin_not_found">Coin Not Found</string>
    <string name="amount">Amount</string>
</resources>