<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.info.InfoFragment"
    android:background="@color/background"
    android:paddingHorizontal="16dp"
    android:paddingVertical="16dp"
    >

    <TextView
        android:id="@+id/textView14"
        style="@style/font_big"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:layout_marginTop="16dp"
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/font_medium"
        android:singleLine="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name"
        />

    <TextView
        android:id="@+id/user_name"
        style="@style/font_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cryptoday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/btn_login_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="Login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/rounded_edit_text"
        style="@style/font_big"
        />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
        app:layout_constraintBottom_toBottomOf="@+id/btn_login_logout"
        app:layout_constraintEnd_toEndOf="@+id/btn_login_logout"
        app:layout_constraintTop_toTopOf="@+id/btn_login_logout"
        android:contentDescription="@string/content_description" />

</androidx.constraintlayout.widget.ConstraintLayout>