<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingHorizontal="16dp"
    android:scrollbars="none"

    android:paddingTop="16dp"
    tools:context=".presentation.detail.DetailFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/coin_item_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginVertical="8dp"
                android:contentDescription="@string/coin_logo"
                android:padding="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/name"
                style="@style/font_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/text_view"
                app:layout_constraintStart_toEndOf="@+id/logo"
                app:layout_constraintTop_toTopOf="@+id/logo" />

            <TextView
                android:id="@+id/current_price"
                style="@style/font_big"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rp. 100.000.000"
                app:layout_constraintBottom_toBottomOf="@+id/logo"
                app:layout_constraintStart_toStartOf="@+id/name" />

            <TextView
                android:id="@+id/textView2"
                style="@style/font_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_price"
                app:layout_constraintBottom_toTopOf="@+id/current_price"
                app:layout_constraintStart_toStartOf="@+id/current_price" />

            <ImageView
                android:id="@+id/icon_arrow"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@color/transparent"
                app:layout_constraintBottom_toBottomOf="@+id/current_price"
                app:layout_constraintStart_toEndOf="@+id/current_price"
                app:layout_constraintTop_toTopOf="@+id/current_price"
                android:layout_marginStart="8dp"/>

            <TextView
                android:id="@+id/price_change_percentage"
                style="@style/font_big"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="100%"
                app:layout_constraintBottom_toBottomOf="@+id/current_price"
                app:layout_constraintStart_toEndOf="@+id/icon_arrow" />

            <ImageView
                android:id="@+id/btn_favourite"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@color/transparent"
                android:clickable="true"
                android:focusable="true"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView3"
            style="@style/font_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/low"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/coin_item_layout" />

        <TextView
            android:id="@+id/low"
            style="@style/font_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:text="@string/space"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/textView3"/>

        <TextView
            android:id="@+id/high"
            style="@style/font_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:text="@string/space"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintEnd_toStartOf="@+id/textView4"/>

        <com.google.android.material.slider.RangeSlider
            android:contentDescription="@string/slide"
            android:id="@+id/slider"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/low"
            app:layout_constraintEnd_toStartOf="@+id/high"
            app:layout_constraintStart_toEndOf="@+id/low"
            app:layout_constraintTop_toTopOf="@+id/low" />


        <TextView
            android:id="@+id/textView4"
            style="@style/font_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent" />

        <View
            android:id="@+id/horizontal_line"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/line_color"
            android:layout_marginTop="16dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <View
            android:id="@+id/vertical_line"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="@color/line_color"
            app:layout_constraintBottom_toBottomOf="@id/horizontal_line3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontal_line" />

        <TextView
            android:id="@+id/textView5"
            style="@style/font_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/market_cap"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/slider" />

        <ImageView
            android:id="@+id/btn_info_market_cap"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:padding="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView5"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="@+id/textView5"
            app:srcCompat="@drawable/ic_baseline_info_24" />

        <TextView
            android:background="@color/loading"
            android:id="@+id/market_cap"
            style="@style/font_medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            app:layout_constraintEnd_toStartOf="@+id/vertical_line"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />


        <TextView
            android:id="@+id/textView6"
            style="@style/font_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/volume_24h"
            app:layout_constraintBottom_toBottomOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="@+id/vertical_line"
            app:layout_constraintTop_toTopOf="@+id/textView5" />
        <ImageView
            android:id="@+id/btn_info_volume"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:padding="4dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView6"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="@+id/textView6"
            app:srcCompat="@drawable/ic_baseline_info_24" />

        <TextView
            android:background="@color/loading"
            android:id="@+id/volume"
            style="@style/font_medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <View
            android:id="@+id/horizontal_line2"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/line_color"
            android:layout_marginTop="16dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/market_cap" />

        <TextView
            android:id="@+id/textView7"
            style="@style/font_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/circulating_supply"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontal_line2" />

        <ImageView
            android:id="@+id/btn_info_circulating_supply"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:padding="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView7"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toTopOf="@+id/textView7"
            app:srcCompat="@drawable/ic_baseline_info_24" />

        <TextView
            android:background="@color/loading"
            android:id="@+id/circulating_supply"
            style="@style/font_medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/vertical_line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView8"
            style="@style/font_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/maximum_supply"
            app:layout_constraintBottom_toBottomOf="@+id/textView7"
            app:layout_constraintStart_toStartOf="@+id/vertical_line"
            app:layout_constraintTop_toTopOf="@+id/textView7" />
        <ImageView
            android:id="@+id/btn_info_maximum_supply"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:padding="4dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView8"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintTop_toTopOf="@+id/textView8"
            app:srcCompat="@drawable/ic_baseline_info_24" />

        <TextView
            android:id="@+id/maximum_supply"
            android:background="@color/loading"
            style="@style/font_medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <View
            android:id="@+id/horizontal_line3"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/line_color"
            android:layout_marginTop="16dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/circulating_supply" />

        <TextView
            android:id="@+id/textView9"
            style="@style/font_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/genesis_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontal_line3" />

        <TextView
            android:id="@+id/genesis_date"
            style="@style/font_small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintTop_toTopOf="@+id/textView9"
            android:background="@color/loading"/>

        <TextView
            android:id="@+id/textView10"
            style="@style/font_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/link"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/link"
            style="@style/font_small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/textView10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/genesis_date"
            app:layout_constraintTop_toTopOf="@+id/textView10"
            android:background="@color/loading"/>

        <TextView
            android:id="@+id/description"
            style="@style/font_small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingBottom="16dp"
            android:singleLine="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            android:background="@color/loading"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

    <!--
    <View
    android:id="@+id/bottom_line"
    android:layout_width="wrap_content"
    android:layout_height="1dp"
    android:background="@color/line_color"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent" />
    -->
