<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.hafiztaruligani.cryptoday.presentation.currencies.CurrenciesViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:paddingHorizontal="16dp"
        android:paddingTop="16dp"
        tools:context=".presentation.currencies.CurrenciesFragment"
        >

        <TextView
            android:id="@+id/textView"
            style="@style/font_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currencies"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btn_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/list_setting"
            android:src="@drawable/ic_baseline_settings_24"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <ImageView
            android:id="@+id/search_image"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/search"
            android:src="@drawable/ic_search"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toStartOf="@+id/search_text"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/view" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/search_loading"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:indicatorSize="24dp"
            android:indeterminate="true"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toStartOf="@+id/search_text"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/view" />

        <EditText
            android:id="@+id/search_text"
            style="@style/font_small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@={viewModel.query}"
            android:autofillHints=""
            android:background="@color/transparent"
            android:hint="@string/search"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#039BE5"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toStartOf="@+id/btn_clear_text"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/view"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <ImageView
            android:id="@+id/btn_clear_text"
            android:layout_marginEnd="8dp"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/view"
            android:background="@drawable/ic_baseline_close_24"
            android:clickable="true"
            android:focusable="true"
            android:visibility="@{viewModel.isQueryEmpty ? View.GONE : View.VISIBLE, default= gone}"
            android:onClick="@{() -> viewModel.onClickButtonClear()}"
            android:contentDescription="@string/default_content_description" />


        <com.google.android.material.tabs.TabLayout
            android:layout_marginTop="16dp"
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/view"
            tools:layout_editor_absoluteX="16dp"
            android:contentDescription="@string/all_favourite"
            android:background="@color/transparent"
            app:tabTextColor="@color/line_color"
            />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tab_layout"
            tools:layout_editor_absoluteX="16dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>